syntax = "proto3";
package influxdata.iox.catalog.v1;

import "google/protobuf/timestamp.proto";

// IOx-specific metadata that will be serialized into the file-level key-value Parquet metadata under a single key.
message IoxMetadata {
  // Metadata format version.
  uint32 version = 1;

  // Timestamp when this file was created.
  google.protobuf.Timestamp creation_timestamp = 2;

  // Table that holds this parquet file.
  string table_name = 3;

  // Partition key of the partition that holds this parquet file.
  string partition_key = 4;

  // Was uint32-based chunk ID.
  reserved 5;

  // Chunk ID.
  //
  // UUID is stored as 16 bytes in big-endian order.
  bytes chunk_id = 11;

  // Partition checkpoint with pre-split data for the in this file.
  PartitionCheckpoint partition_checkpoint = 6;

  // Database checkpoint created at the time of the write.
  DatabaseCheckpoint database_checkpoint = 7;

  // Wallclock timestamp of when the first data in this file was received by IOx.
  google.protobuf.Timestamp time_of_first_write = 8;

  // Wallclock timestamp of when the last data in this file was received by IOx.
  google.protobuf.Timestamp time_of_last_write = 9;

  // Order of this chunk relative to other overlapping chunks.
  uint32 chunk_order = 10;
}

// Partition checkpoint.
//
// Note that a partition checkpoint belongs to a single partition (via table name and partition key). Since this
// checkpoint is usually serialized as part of `IoxMetadata`, the partition information is NOT repeated as part of this
// message.
message PartitionCheckpoint {
  // Maps `sequencer_id` to the to-be-persisted minimum and seen maximum sequence numbers.
  map<uint32, OptionalMinMaxSequence> sequencer_numbers = 1;

  // Was Minimum unpersisted timestamp.
  reserved 2;

  // Flush timestamp.
  google.protobuf.Timestamp flush_timestamp = 3;
}

// Record of the playback state for the whole database.
//
// This effectively contains the minimum sequence numbers over the whole database that are the starting point for
// replay.
message DatabaseCheckpoint {
  // was `min_sequence_numbers`
  reserved 1;

  // Maps `sequencer_id` to the to-be-persisted minimum and seen maximum sequence numbers.
  map<uint32, OptionalMinMaxSequence> sequencer_numbers = 2;
}

// An optional uint64.
message OptionalUint64 {
  uint64 value = 1;
}

// The optional to-be-replayed minimum and seen maximum sequence numbers for a given sequencer.
//
// If the minimum value is missing, no replay is required for this sequencer.
message OptionalMinMaxSequence {
  OptionalUint64 min = 1;
  uint64 max = 2;
}
